# mimir

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tags.json
.agents/skills/code-review/: SKILL.md
.agents/skills/cut-release/: SKILL.md
.agents/skills/open-pr/: SKILL.md
.claude/: settings.json
.claude/hooks/: format-python.sh  guard-git.sh
.codex/: config.toml
.cursor/: hooks.json
.cursor/commands/: check.md  docs.md  fix.md  smoke.md
.cursor/hooks/: format-python.sh  guard-git.sh
.cursor/rules/: project.mdc  python.mdc  tests.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  docs.yml  labeler.yml  pr-title.yml  release.yml  stale.yml
assets/app-icon/: Mimir.icns  build-icns.sh
assets/favicons/: manifest.webmanifest
blog/: index.html
blog/category/releases/: index.html
blog/mimir-v0-1-0/: index.html
contributing/: index.html
docs/: architecture.md  brand.md  contributing.md  faq.md  index.md
docs/assets/: brand.css
docs/blog/: index.md
docs/blog/posts/: v0-1-0.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  ingest-obsidian.md  rag-chat.md  watching-files.md
docs/hooks/: brand_assets.py
docs/overrides/: home.html
docs/reference/: architecture.md  cli.md  index.md
faq/: index.html
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/ingest-obsidian/: index.html
guides/rag-chat/: index.html
guides/watching-files/: index.html
reference/: index.html
reference/architecture/: index.html
reference/cli/: index.html
search/: search_index.json
src/mimir/: __init__.py  __main__.py  chat.py  chunking.py  cli.py  config.py  db.py  embeddings.py  ingest.py  loaders.py  query.py
tests/: conftest.py  test_chat.py  test_chunking.py  test_config.py  test_loaders.py  test_smoke.py
