[project]
name = "mimir"
version = "0.1.0"
description = "Local-first second brain — Qdrant + fastembed + Ollama on your Mac"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Laurence Mostert" }]
license = { text = "MIT" }
keywords = [
    "vector-database",
    "qdrant",
    "rag",
    "second-brain",
    "embeddings",
    "local-first",
    "personal-knowledge-management",
    "fastembed",
    "ollama",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "qdrant-client[fastembed]>=1.12.0",
    "fastembed>=0.8.0",
    "pypdf>=4.3.0",
    "typer>=0.26.8",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
mimir = "mimir.cli:app"

[project.urls]
Homepage = "https://github.com/LaurMost/mimir"
Repository = "https://github.com/LaurMost/mimir"
Issues = "https://github.com/LaurMost/mimir/issues"
Changelog = "https://github.com/LaurMost/mimir/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=9.1.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["qdrant_storage", "notes"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "PL", "S"]
ignore = [
    "E501",     # line length — Black owns formatting; it leaves long strings/comments intact
    "PLR0913",  # too many arguments — CLI commands legitimately take many
    "PLR0912",  # too many branches — ingest pipeline is inherently branchy
    "PLR2004",  # magic values in tests are fine
]

[tool.ruff.lint.per-file-ignores]
# Streaming a chat completion from Ollama is intentionally untimed — the
# response trickles in over a long-lived connection (S113).
"src/mimir/chat.py" = ["S113"]
# Typer uses `typer.Argument(...)` / `typer.Option(...)` calls in defaults —
# that's the canonical pattern, not a real bug. Lazy imports in cli.py are
# intentional (e.g. shutil.which only used by `watch`). The `watch` command
# deliberately shells out to the `fswatch` binary on PATH (S603/S607) and uses
# an internal `assert` to narrow the Popen stdout type (S101).
"src/mimir/cli.py" = ["B008", "PLC0415", "S101", "S603", "S607"]
# pypdf is heavy and only needed when actually loading a PDF; the lazy import is
# deliberate. Per-page extraction is best-effort — a corrupt page is skipped (S112).
"src/mimir/loaders.py" = ["PLC0415", "S112"]
# test_smoke.py is literally testing that every module imports.
"tests/test_smoke.py" = ["PLC0415"]
# Tests legitimately import pytest helpers inside test functions for clarity.
"tests/*" = ["PLR2004", "S101", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:fastembed.*",
    "ignore::DeprecationWarning:qdrant_client.*",
]

[tool.coverage.run]
source = ["mimir"]
branch = true
# __main__.py is the `python -m mimir` entrypoint — not meaningfully testable.
omit = ["src/mimir/__main__.py"]

[tool.coverage.report]
show_missing = true
# Branch-coverage baseline is ~37%. Ratchet this up as tests are added.
fail_under = 35

[tool.mypy]
# Targets 3.12 (not our 3.11 floor) because numpy 2.x stubs use 3.12-only `type`
# syntax that older targets can't parse. Runtime 3.11 compatibility is enforced
# separately by ruff (target-version = py311) and the 3.11 CI test matrix.
python_version = "3.12"
files = ["src"]
# Third-party libs (qdrant_client, fastembed, pypdf, ...) ship without stubs.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
